# Onboard-SDK-ROS

./: .gitignore  README.md  m100-sim.rviz
dji_sdk/: CMakeLists.txt  package.xml
dji_sdk/action/: LocalWaypointMission.action  LocalWaypointNavigation.action  WaypointNavigation.action
dji_sdk/asl_launch/: Laptop_for_flourish_exp_for_RAM_again_1m_rect.launch  Laptop_for_flourish_exp_for_outdoor_integration_week.launch  Laptop_for_flourish_exp_rovio.launch  Laptop_for_flourish_exp_vicon.launch  Onboard_exp_for_calibration_falcon2.launch  Onboard_exp_with_vicon_rw.launch  Onboard_exp_with_zr300_rw_indoor.launch  Onboard_exp_with_zr300_rw_indoor_falcon2.launch  Onboard_exp_with_zr300_rw_integration_week.launch  Onboard_exp_with_zr300_rw_outdoor_15m_rect.launch  Onboard_exp_with_zr300_rw_outdoor_1m_rect.launch  Onboard_exp_with_zr300_rw_outdoor_integration_week.launch  Onboard_exp_with_zr300_rw_outdoor_integration_week_new.launch  Onboard_joy_for_systemID.launch  SimulateM100.launch  realsense_M100_extrinsic_calib.launch
dji_sdk/include/dji_sdk/: dji_drone.h  dji_sdk.h  dji_sdk_node.h
dji_sdk/launch/: dji_sdk.launch  sdk_manifold.launch  sdk_nuc.launch
dji_sdk/resources/: msf_parameters_vision_realsense-2017-02-26.yaml  msf_parameters_vision_realsense.yaml  rovio_filter-2017-02-26.info  trajectory_exp_m100_rect_15m.yaml  trajectory_exp_m100_rect_1m.yaml
dji_sdk/resources/sensors/intel2/: rovio_cam.yaml  rovio_filter.info.org  rovio_filter.info_new
dji_sdk/resources/sensors/zr300/: rovio_filter.info
dji_sdk/src/modules/: dji_sdk_node_actions.cpp  dji_sdk_node_main.cpp  dji_sdk_node_mission.cpp  dji_sdk_node_services.cpp
dji_sdk_demo/script/: client.py
dji_sdk_demo/src/: client.cpp
dji_sdk_dji2ros/: CMakeLists.txt  package.xml
dji_sdk_dji2ros/src/: dji2ros_wrapper.py
dji_sdk_web_groundstation/webpage_waypoint_client/web_waypoint/js/: wp_control.js
dji_waypoint_navigator/: CMakeLists.txt  data.yml  package.xml
dji_waypoint_navigator/launch/: dji_test_navigator.launch  dji_waypoint_navigator.launch
dji_waypoint_navigator/params/: trajectory_sugarbeet.yaml  waypoints-bonn-field.yaml
dji_waypoint_navigator/src/: dji_remote_control.cpp  external_transform_spoofer.py  rviz_path_creator.py  test_navigator.cpp  waypoint_navigator.cpp
dji_waypoint_navigator/srv/: GoToGlobalWaypoint.srv
dji_waypoint_navigator/viz/: matrice.rviz  test_navigator.rviz  waypoint_navigator.rviz
launch/: Laptop_for_flourish_exp_for_RAM_indoor.launch  Laptop_for_flourish_exp_for_RAM_outdoor_1m_rect.launch
