<?xml version="1.0"?>
<package format="2">
  <name>dji_waypoint_navigator</name>
  <version>0.1.6</version>
  <description>The dji_waypoint_navigator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="norman.li@dji.com">Norman Li</maintainer>
  <maintainer email="me@botao.hu">Botao Hu</maintainer>
  <maintainer email="mpopovic@ethz.ch">Marija Popovic</maintainer>



  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>dji_sdk</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roslib</depend>
  <depend>cmake_modules</depend>

</package>
